--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -6,5 +6,6 @@ encoding//src/main/resources/templates/factura/form.html=UTF-8
 encoding//src/main/resources/templates/factura/ver.html=UTF-8
 encoding//src/main/resources/templates/form.html=UTF-8
 encoding//src/main/resources/templates/listar.html=UTF-8
+encoding//src/main/resources/templates/login.html=UTF-8
 encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
